# parkour_deploy

./: README.md
legged_rl-go1_student_deploy/control_msg/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/image_mnn/: CMakeLists.txt  imageConfig.bash  package.xml
legged_rl-go1_student_deploy/image_mnn/config/: image_config_yaml
legged_rl-go1_student_deploy/image_mnn/include/: ImageNode.h  TimeDebug.h
legged_rl-go1_student_deploy/image_mnn/launch/: depth_image.launch  image_mnn.launch  image_mnn_sim.launch
legged_rl-go1_student_deploy/image_mnn/src/: ImageNode.cpp  main.cpp
legged_rl-go1_student_deploy/legged_base/: README.md
legged_rl-go1_student_deploy/legged_base/legged_gazebo/config/: default.yaml  realsense_d435.yaml
legged_rl-go1_student_deploy/legged_base/legged_gazebo/launch/: fire_empty_world.launch  go1_empty_world.launch  lt_empty_world.launch  xiaomigo_empty_world.launch
legged_rl-go1_student_deploy/legged_base/legged_gazebo/src/: LeggedHWSim.cpp
legged_rl-go1_student_deploy/legged_base/legged_gazebo/worlds/: 15.world  empty_world.world  star.world  test.world
legged_rl-go1_student_deploy/legged_robot/legged_fire/: fd2.urdf
legged_rl-go1_student_deploy/legged_robot/legged_fire/fire_description/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/legged_robot/legged_fire/fire_description/meshes/: FL_Thigh.STL  FL_Thigh.dae  FL_hip_link.STL  FR_Knee.dae  FR_thigh_link.STL  HL_Ankle.STL  HL_Knee.STL  HL_Knee.dae  HL_Thigh.dae  HR_Ankle.STL  HR_Hip.STL  HR_Hip.dae  RF_Hip.STL  RF_calf_link.STL
legged_rl-go1_student_deploy/legged_robot/legged_fire/fire_description/urdf/: fd.urdf
legged_rl-go1_student_deploy/legged_robot/legged_fire/meshes/: Base.STL  FL_Ankle.STL  FL_Ankle.dae  FL_Knee.dae  FL_calf_link.STL  FR_Ankle.STL  FR_Ankle.dae  FR_Knee.STL  FR_Thigh.dae  HL_Ankle.dae  HL_Hip.STL  HL_Thigh.STL  HR_Ankle.dae  HR_Knee.dae  HR_Thigh.STL  HR_Thigh.dae
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_description/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_description/urdf/: lt_sim.xacro
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/app/: command.cpp  command.h  config.h  motor_control.c  motor_control.h  queue.h  transmit.cpp  transmit.h
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/config/: lt.yaml
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/launch/: legged_gsmp_hw.launch
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/scripts/: timedelay_launch.sh
legged_rl-go1_student_deploy/legged_robot/legged_lt/legged_lt_hw/src/: GsmpHW.cpp  config1.txt  legged_gsmp_hw.cpp
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_description/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_description/urdf/: robot.xacro
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_hw/config/: go1.yaml
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_hw/launch/: go1.launch  legged_unitree_hw.launch
legged_rl-go1_student_deploy/legged_robot/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp
legged_rl-go1_student_deploy/legged_robot/legged_xiaomi/legged_xiaomigo_description/: CMakeLists.txt  package.xml
legged_rl-go1_student_deploy/legged_robot/legged_xiaomi/legged_xiaomigo_description/launch/: empty_world.launch  view_urdf.launch
legged_rl-go1_student_deploy/legged_robot/legged_xiaomi/legged_xiaomigo_description/meshes/: FL_calf_link.STL  (+7 more)
legged_rl-go1_student_deploy/realsense_gazebo_plugin/include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
legged_rl-go1_student_deploy/realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
legged_rl-go1_student_deploy/rl_controllers/: CMakeLists.txt  package.xml  rl_controllers_plugins.xml
legged_rl-go1_student_deploy/rl_controllers/config/: controllers.yaml  joy.yaml
legged_rl-go1_student_deploy/rl_controllers/config/fire/: fire_student.yaml
legged_rl-go1_student_deploy/rl_controllers/config/go1/: go1_kd.yaml  go1_parkour.yaml  go1_topic.yaml
legged_rl-go1_student_deploy/rl_controllers/config/lt/: lt_amp.yaml  lt_kd.yaml  lt_student.yaml
legged_rl-go1_student_deploy/rl_controllers/config/xiaomigo/: xiaomigo_student.yaml
legged_rl-go1_student_deploy/rl_controllers/include/: TimeDebug.h  TutorialsConfig.h
legged_rl-go1_student_deploy/rl_controllers/include/rl_controllers/: ParkourController.h  RLControllerBase.h  RotationTools.h  utilities.h
legged_rl-go1_student_deploy/rl_controllers/launch/: joy_teleop.launch  record.launch
legged_rl-go1_student_deploy/rl_controllers/launch/parkour_launch/: load_parkour_controller.launch  parkour_start.launch  parkour_start_real.launch
legged_rl-go1_student_deploy/rl_controllers/policy/fire/: policy_lstm.onnx
legged_rl-go1_student_deploy/rl_controllers/policy/go1/: actor(7.22).mnn  actor（7.23）.mnn  base_actor.mnn  base_actor.onnx
legged_rl-go1_student_deploy/rl_controllers/policy/lt/: model.onnx  policy_lstm.onnx
legged_rl-go1_student_deploy/rl_controllers/policy/xiaomigo/: policy_lstm.onnx
legged_rl-go1_student_deploy/rl_controllers/rviz/: legged_robot.rviz
legged_rl-go1_student_deploy/rl_controllers/src/: ParkourController.cpp  RLControllerBase.cpp  utilities.cpp
legged_rl-go1_student_deploy/rl_controllers/src/scripts/: README.md  base_actor.pt  export_lstm.py  export_parkour.py
legged_rl-go1_student_deploy/rqt_multiplot_config/: 12MotorPosTrack.xml  body_acceleration.xml  body_position.xml  cmd_vel.xml  contact_force.xml  contact_state.xml  feet_position.xml  feet_velocity.xml  imu_data.xml  joint345position.xml  joint_acc.xml  joint_position.xml  joint_velocity.xml  leg_tracking_debug.xml  motor_debug.xml  multi_module.xml  multi_module_2.xml  torque.xml
(+25 files in other folders)
