<?xml version="1.0"?>
<package format="2">
    <name>rl_controllers</name>
    <version>0.0.0</version>
    <description>The rl_controllers packages. reference: sustech_clear_lab/legged_rl</description>
    <maintainer email="contact@bridgedp.com">Bridgedp Team</maintainer>
    <license>BSD</license>
    <author email="contact@bridgedp.com">Bridgedp Team</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>legged_common</depend>

    <depend>controller_interface</depend>
    <exec_depend>controller_manager</exec_depend>
    <depend>dynamic_reconfigure</depend>
    <depend>rviz</depend>
    <depend>std_msgs</depend>
    <depend>robot_state_publisher</depend>
    <depend>message_generation</depend>
    <depend>tf</depend>
    <depend>tf2</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>control_msg</depend>

    <export>
        <controller_interface plugin="${prefix}/rl_controllers_plugins.xml"/>
    </export>
</package>
